--- a/kelas-5/tugas/Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html
+++ b/kelas-5/tugas/Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html
@@ -155,7 +155,7 @@ button:hover { background-color: #0056b3; }
 <div class="container">
     <div class="nav">
         <a href="🕵Petualangan-Seru.html">◀️ kembali</a>
-        <a href="Soal_Petualangan.pdf" download>📥 Download</a>
+        <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.docx" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
         🕵️ Detektif Cilik Ayo Uji Kepintaranmu
@@ -285,3 +285,4 @@ document.addEventListener("DOMContentLoaded",()=>{["nama","kelas","absen"].forEa
 </script>
 </body>
 </html>
+
