--- a/kelas-5/tugas/tugas-IPAS.html
+++ b/kelas-5/tugas/tugas-IPAS.html
@@ -195,7 +195,7 @@
     <div class="dropdown" id="dropdownTanggal">
       <button class="dropbtn">📅 Pilih Tugas</button>
       <div class="dropdown-content">
-        <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html">12 November 2025</a>
+        <a href="tugas_IPAS_11_Nov_25.html">12 November 2025</a>
         <a href="#" id="tugasLain">Tugas Lain</a>
       </div>
     </div>
