--- a/kelas-5/tugas/tugas_IPAS_11_Nov_25.html
+++ b/kelas-5/tugas/tugas_IPAS_11_Nov_25.html
@@ -182,72 +182,53 @@ button:hover { background-color: #0056b3; }
 
 <script>
 // =================== DATA SOAL ===================
-let soal = [
-{q:"Perhatikan pernyataan berikut!<br>1. Dapat menarik benda plastik<br>2. Dapat menarik benda logam<br>3. Dapat menolak benda plastik<br>4. Dapat menolak benda logam<br>Pernyataan yang tepat terkait magnet ditunjukkan oleh nomor ....",a:["1","2","3","4"],k:1},
-{q:"Adit meletakkan magnet batangan di atas meja. Dia lalu menjatuhkan peniti di dekat magnet. Peniti tersebut menempel pada magnet. Peristiwa ini terjadi akibat adanya ....",a:["usaha magnet","kecepatan magnet","medan magnet","perubahan magnet"],k:2},
-{q:"Perhatikan gambar di bawah!<br>(Pak Mahendra memasang baut menggunakan obeng bermagnet)<br>Bagian yang berisi magnet ditunjukkan oleh nomor ....",a:["(1)","(2)","(3)","(4)"],k:1},
-{q:"Perhatikan tabel berikut!<br>No&nbsp;&nbsp;Nama Benda<br>1 paku<br>2 jarum<br>3 beras<br>4 ranting<br>5 peniti<br>Benda-benda di atas yang dapat ditarik kuat oleh magnet yaitu ....",a:["1, 2, dan 5","1, 2, dan 3","2, 3, dan 5","2, 4, dan 5"],k:0},
-{q:"Danisha membawa benda yang tidak memiliki sifat kemagnetan sama sekali. Benda yang dimaksud yaitu ....",a:["besi","baja","kobalt","kerikil"],k:3},
-{q:"Magnet memberikan banyak manfaat dalam kehidupan sehari-hari. Berikut ini salah satu contoh manfaatnya yaitu ....",a:["sepatu sepak bola","termometer","balon udara","pintu kulkas"],k:3},
-{q:"Perhatikan gambar di bawah ini!<br>(Gambar menunjukkan jarum kompas)<br>Alat pada gambar di atas bekerja menggunakan prinsip ....",a:["gaya gesek","gaya gravitasi","gaya magnet","gaya pegas"],k:2},
-{q:"Benda berikut yang bukan termasuk benda bermagnet adalah ....",a:["besi","baja","plastik","nikel"],k:2},
-{q:"Bagian magnet yang memiliki gaya tarik paling kuat adalah ....",a:["tengah magnet","kutub magnet","sisi samping magnet","permukaan magnet"],k:1},
-{q:"Ketika dua magnet didekatkan, magnet akan saling tolak-menolak atau tarik-menarik. Hal ini menunjukkan adanya ....",a:["gaya magnet","gaya gravitasi","gaya listrik","gaya gesek"],k:0},
+let soal = [{q:"Perhatikan benda berikut! 1) lemari 2) bolpoin 3) parfum 4) blender. Benda yang hanya dapat berfungsi apabila mendapat energi listrik yaitu...", a:["1)","2)","3)","4)"], k:3},
+  {q:"Sepeda motor Pak Anton dapat menyala karena mendapatkan energi listrik dari ....", a:["spion","aki","gardu","roda"], k:2},
+  {q:"Energi listrik berasal dari pergerakan benda kecil bernama ....", a:["elektron","neutron","proton","ozon"], k:1},
+  {q:"Setelah mengupas kabel listrik, terlihat bagian dalam berupa ....", a:["emas","besi","tembaga","plastik"], k:3},
+  {q:"Jika baterai pada senter dipasang terbalik, senter akan ....", a:["menyala seperti semula","lebih terang","lebih redup","mati"], k:4},
+  {q:"Alat yang mengubah arus AC menjadi DC yaitu ....", a:["pompa air","kompor listrik","laptop","kulkas"], k:3},
+  {q:"Benda yang terhubung ke kabel PLN disebut ....", a:["gardu","sakelar","stop kontak","sekering"], k:3},
+  {q:"Fungsi gardu listrik yaitu ....", a:["menyalurkan listrik dari sakelar","menyalurkan listrik dari pembangkit","menyimpan listrik dari sakelar","menyimpan listrik dari pembangkit"], k:2},
+  {q:"Pembangkit listrik yang memanfaatkan air waduk yaitu ....", a:["PLTU","PLTA","PLTS","PLTG"], k:2},
+  {q:"Panel surya digunakan untuk ....", a:["PLTG","PLTU","PLTS","PLTA"], k:3},
+  {q:"PLTU menggunakan bahan bakar ....", a:["air","besi","solar","batu bara"], k:4},
+  {q:"Pembangkit listrik pada gambar memanfaatkan ....", a:["air","angin","cahaya matahari","panas bumi"], k:2},
 
-{q:"Magnet memiliki dua kutub, yaitu ....",a:["kutub utara dan timur","kutub barat dan selatan","kutub utara dan selatan","kutub barat dan timur"],k:2},
-{q:"Jika dua kutub magnet yang sama didekatkan, maka akan ....",a:["saling tarik menarik","saling menempel","saling tolak-menolak","saling menempel kuat"],k:2},
-{q:"Apabila kutub utara magnet didekatkan dengan kutub selatan magnet lain, maka kedua magnet akan ....",a:["tolak-menolak","tarik-menarik","diam saja","lepas"],k:1},
-{q:"Magnet dapat dibuat dengan cara ....",a:["menggosok besi dengan magnet tetap","memukul besi dengan palu","memanaskan logam","menaruh besi di air"],k:0},
-{q:"Salah satu benda yang bisa menjadi magnet sementara adalah ....",a:["besi","kayu","plastik","kertas"],k:0},
-{q:"Berikut ini contoh benda yang menggunakan magnet dalam kehidupan sehari-hari, kecuali ....",a:["pengeras suara","pintu kulkas","televisi","piring kaca"],k:3},
-{q:"Magnet memiliki sifat dapat menembus benda tertentu. Salah satu benda yang dapat ditembus gaya magnet adalah ....",a:["kertas","logam","kayu tebal","batu besar"],k:0},
-{q:"Benda yang tidak dapat ditarik magnet disebut ....",a:["benda logam","benda nonmagnetik","benda magnetik","benda bermuatan"],k:1},
-{q:"Ketika paku digosok dengan magnet, lama-kelamaan paku dapat menarik benda kecil dari logam. Peristiwa ini menunjukkan bahwa ....",a:["paku berubah menjadi magnet","paku menjadi berat","paku berubah bentuk","paku menjadi panas"],k:0},
-{q:"Magnet banyak dimanfaatkan dalam alat-alat listrik. Contoh alat listrik yang menggunakan magnet adalah ....",a:["kipas angin","lampu minyak","kompor gas","senter tanpa baterai"],k:0},
+  {q:"Contoh penggunaan teknologi dalam keseharian yaitu ....", a:["berjalan saat hujan","melihat benda dengan mata","memotong daging dengan pisau","tidur di malam hari"], k:3},
+  {q:"Teknologi yang pertama digunakan manusia berupa ....", a:["mesin uap","mesin telegraf","emas batangan","batu yang tajam"], k:4},
+  {q:"Teknologi untuk berlayar dan menjelajah lautan yaitu ....", a:["jam tangan","mesin cetak","kompas","USG"], k:3},
+  {q:"Teknologi yang ditemukan James Watt yaitu ....", a:["mesin uap","telepon","komputer","radio"], k:1},
+  {q:"Ilmuan yang mencetuskan energi listrik dan pembangkit listrik yaitu ....", a:["Albert Einstein","Thomas Edison","Guglielmo Marconi","Alexander Graham Bell"], k:2},
+  {q:"Teknologi yang membantu petani masa kini yaitu ....", a:["sapi untuk membajak","ani-ani","traktor","pukat harimau"], k:3},
+  {q:"Tujuan teknologi pertanian yaitu ....", a:["panen dalam seminggu","tanaman kerdil","memusnahkan sebagian hama","menciptakan bibit unggul"], k:4},
+  {q:"Contoh teknologi bidang industri manufaktur yaitu ....", a:["pestisida","mesin membuat tas","lampu penerangan","kompor listrik"], k:2},
+  {q:"Santi menggunakan teknologi rumit untuk informasi cepat, yaitu ....", a:["internet","koran","mesin telegraf","rice cooker"], k:1},
 
-{q:"Perhatikan benda berikut!<br>1. lemari<br>2. bolpoin<br>3. parfum<br>4. blender<br>Benda yang hanya dapat berfungsi apabila mendapat energi listrik yaitu ....",a:["1","2","3","4"],k:3},
-{q:"Sepeda motor Pak Anton dapat menyala dan memancarkan cahaya karena mendapatkan energi listrik dari ....",a:["spion","aki","gardu","roda"],k:1},
-{q:"Tino bersama teman-temannya membuat rangkaian listrik seperti gambar di atas. Bagian rangkaian tersebut yang dapat memutuskan dan menyambungkan aliran listrik yaitu ....",a:["(1)","(2)","(3)","(4)"],k:3},
-{q:"Zaki ditugaskan oleh Ibu guru untuk menuliskan sumber energi listrik. Agar tugas Zaki benar, maka dia harus menulis nomor ....",a:["1, 2, dan 5","1, 2, dan 3","2, 3, dan 5","2, 4, dan 5"],k:2},
-{q:"Energi listrik merupakan energi yang berasal dari pergerakan benda yang sangat kecil yang disebut ....",a:["elektron","neutron","proton","ozon"],k:0},
-{q:"Diana membeli kabel listrik di toko. Kemudian dia mengelupas bagian luar kabel yang berwarna hitam sehingga terlihat bagian dalam kabel yang terbuat dari ....",a:["emas","besi","tembaga","plastik"],k:2},
-{q:"Benda pada gambar di atas dapat mengubah energi listrik menjadi energi ....",a:["gerak","cahaya","bunyi","panas"],k:3},
-{q:"Benda pada gambar di atas berfungsi agar orang yang berada dalam ruangan tidak kepanasan. Benda tersebut dapat mengubah energi listrik menjadi energi ....",a:["gerak","panas","bunyi","cahaya"],k:0},
-{q:"Dwita membuat rangkaian listrik sederhana dengan 2 lampu, kabel, dan 1 baterai. Lampu dapat menyala. Kemudian Dwita menambahkan 1 baterai lagi, maka lampu akan ....",a:["mati (padam)","menyala lebih redup","menyala lebih terang","menyala seperti dengan 1 baterai"],k:2},
-{q:"Adit memasang baterai pada senter sehingga senter dapat menyala. Tiba-tiba Adit melepas baterai lalu memasangnya secara terbalik, maka senter tersebut akan ....",a:["menyala seperti semula","menyala lebih terang","menyala lebih redup","mati (padam)"],k:3},
+  {q:"Perhatikan pernyataan berikut: 1. Dapat menarik benda plastik 2. Dapat menarik benda logam 3. Dapat menolak benda plastik 4. Dapat menolak benda logam. Pernyataan yang tepat terkait magnet ditunjukkan oleh nomor....", a:["1","2","3","4"], k:2},
+  {q:"Adit meletakkan magnet batangan di atas meja. Ia lalu menjatuhkan peniti di dekat magnet. Peniti tersebut menempel pada magnet. Peristiwa ini terjadi akibat adanya....", a:["usaha magnet","kecepatan magnet","medan magnet","perubahan magnet"], k:3},
+  {q:"Benda-benda di atas yang dapat ditarik kuat oleh magnet yaitu....", a:["1, 2, dan 5","1, 2, dan 3","2, 3, dan 5","2, 4, dan 5"], k:1},
+  {q:"Danisha membawa benda yang tidak memiliki sifat kemagnetan sama sekali. Benda yang dimaksud yaitu....", a:["besi","baja","kobalt","kerikil"], k:4},
+  {q:"Magnet memberikan banyak manfaat dalam kehidupan sehari-hari. Berikut ini salah satu contohnya yaitu....", a:["sepatu sepak bola","termometer","balon udara","pintu kulkas"], k:4},
+  {q:"Perhatikan pernyataan berikut! 1. Magnet dapat menarik benda dari logam 2. Magnet dapat menarik semua benda 3. Magnet memiliki dua kutub 4. Magnet tidak memiliki kutub. Pernyataan yang benar ditunjukkan oleh nomor....", a:["1 dan 3","2 dan 4","2 dan 3","1 dan 2"], k:1},
+  {q:"Berikut ini yang merupakan contoh penggunaan magnet dalam kehidupan sehari-hari yaitu....", a:["timbangan badan","kompas","jarum suntik","gayung"], k:2},
+  {q:"Salah satu cara membuat magnet adalah dengan....", a:["memotong magnet","memanaskan magnet","menggosok besi dengan magnet searah","membengkokkan besi"], k:3},
 
-{q:"Benda di atas yang dapat berfungsi dengan menggunakan sumber listrik arus searah (DC) ditunjukkan oleh nomor ....",a:["(1)","(2)","(3)","(4)"],k:2},
-{q:"Salah satu perangkat elektronik yang dapat digunakan untuk mengubah sumber arus listrik dua arah menjadi sumber arus listrik searah yaitu ....",a:["pompa air","kompor listrik","laptop","kulkas"],k:2},
-{q:"Benda di atas terhubung dengan kabel milik PLN sehingga energi listrik dapat diperoleh masyarakat. Benda di atas disebut ....",a:["gardu","sakelar","stop kontak","sekering"],k:0},
-{q:"Fungsi benda pada gambar di atas yaitu ....",a:["menyalurkan listrik dari sakelar","menyalurkan listrik dari pembangkit listrik","menyimpan listrik dari sakelar","menyimpan listrik dari pembangkit listrik"],k:1},
-{q:"Pembangkit listrik yang memanfaatkan air waduk yaitu ....",a:["PLTU","PLTA","PLTS","PLTG"],k:1},
-{q:"Made melihat banyak panel surya di kebun kakeknya. Alat tersebut digunakan untuk ....",a:["PLTG","PLTU","PLTS","PLTA"],k:2},
-{q:"PLTU memanfaatkan hasil pemanasan ketel uap yang dapat memutar turbin. Bahan bakar yang digunakan yaitu ....",a:["air","besi","solar","batu bara"],k:3},
-{q:"Pembangkit listrik pada gambar di atas memanfaatkan ....",a:["air","angin","cahaya matahari","panas bumi"],k:1},
-{q:"Perhatikan pernyataan berikut!<br>1. oven<br>2. radio<br>3. blender<br>4. rice cooker<br>Benda-benda yang mengubah energi listrik menjadi energi panas ditunjukkan oleh nomor ....",a:["1 dan 2","2 dan 3","3 dan 4","1 dan 4"],k:3},
-{q:"Pembangkit listrik di atas memanfaatkan bahan bakar ....",a:["solar","udara","minyak bumi","batu bara"],k:3},
-
-{q:"Perhatikan pernyataan berikut!<br>1. harus menggunakan listrik<br>2. tidak menggunakan ilmu pengetahuan<br>3. memperumit pekerjaan manusia<br>4. menyelesaikan permasalahan<br>Salah satu ciri penggunaan teknologi dalam kehidupan sehari-hari ditunjukkan oleh nomor …",a:["1","2","3","4"],k:3},
-{q:"Berikut ini salah satu contoh penggunaan teknologi dalam keseharian yaitu …",a:["berjalan ketika sedang hujan","melihat benda dengan mata","memotong daging dengan pisau","tidur pada saat malam hari"],k:2},
-{q:"Teknologi pada gambar di atas digunakan sebagai alat …",a:["penerangan","komunikasi","transportasi","penglihatan"],k:1},
-{q:"Adit bersama ayahnya akan bercocok tanam di kebun. Peralatan teknologi yang dapat mereka gunakan ditunjukkan oleh nomor …",a:["1, 2, dan 5","1, 2, dan 3","2, 3, dan 5","2, 4, dan 5"],k:1},
-{q:"Perkembangan penggunaan teknologi begitu panjang. Teknologi yang digunakan manusia pertama kali berupa …",a:["mesin uap","mesin telegraf","emas batangan","batu yang tajam"],k:3},
-{q:"Salah satu contoh teknologi yang digunakan manusia untuk berlayar dan menjelajah lautan yaitu …",a:["jam tangan","mesin cetak","kompas","USG"],k:2},
-{q:"Manfaat teknologi yang ditunjukkan oleh gambar di atas yaitu …",a:["memberikan hiburan","media komunikasi","alat penerangan","transportasi darat"],k:1},
-{q:"Setiap hari Minggu Bu Diana menggunakan alat di atas. Alat tersebut termasuk teknologi yang dapat digunakan untuk …",a:["memanaskan air","memasak daging mentah","menambah cita rasa","menghaluskan buah"],k:1},
-{q:"Pada tahun 1765, seorang ilmuwan bernama James Watt berhasil menciptakan suatu teknologi, yaitu …",a:["mesin uap","telepon","komputer","radio"],k:0},
-{q:"Ilmuwan yang pertama kali mencetuskan penggunaan energi listrik sekaligus membangun pembangkit listrik yaitu …",a:["Albert Einstein","Thomas Edison","Guglielmo Marconi","Alexander Graham Bell"],k:1},
-
-{q:"Benda di atas yang termasuk teknologi sederhana ditunjukkan oleh nomor …",a:["(1)","(2)","(3)","(4)"],k:0},
-{q:"Pak Dedin merupakan seorang petani di desa. Teknologi masa kini yang dapat membantu pekerjaan Pak Dedin yaitu …",a:["menggunakan sapi untuk membajak sawah","memanen padi dengan ani-ani","menggemburkan tanah dengan traktor","menggunakan pukat harimau"],k:2},
-{q:"Benda di atas digunakan sebagai alat teknologi di bidang …",a:["kesehatan","pertanian","pembangunan","olahraga"],k:0},
-{q:"Karakteristik teknologi pada gambar di atas yaitu …",a:["tidak memerlukan listrik","banyak ditemukan di kantor","menyimpan makanan agar awet","menghasilkan energi panas"],k:2},
-{q:"Berikut ini salah satu tujuan penggunaan teknologi dalam pertanian yaitu …",a:["dapat panen dalam satu minggu","menghasilkan tanaman yang kerdil","memusnahkan sebagian tanaman hama","menciptakan bibit tanaman unggul"],k:3},
-{q:"Salah satu contoh penggunaan teknologi di bidang industri manufaktur yaitu …",a:["mempergunakan pestisida agar hama hilang","mempergunakan mesin untuk membuat tas","menggunakan lampu sebagai penerangan","mempergunakan kompor listrik untuk masak"],k:1},
-{q:"Santi menggunakan salah satu teknologi yang rumit untuk mendapatkan informasi secara cepat. Teknologi yang dimaksud yaitu …",a:["internet","koran","mesin telegraf","rice cooker"],k:0},
-{q:"Masalah yang dapat diselesaikan dengan teknologi pada gambar di atas yaitu …",a:["jarak antar kota yang jauh","ruangan yang gelap dan sempit","letak ruangan yang tinggi","berkomunikasi dengan orang yang jauh"],k:0},
-{q:"Orang yang pertama kali menemukan televisi ditunjukkan oleh nomor …<br>1. Philo T. Farnsworth<br>2. Guglielmo Marconi<br>3. Thomas Edison<br>4. Alexander Graham Bell",a:["1","2","3","4"],k:0},
-{q:"Peralatan pada gambar di atas sudah tergantikan dengan teknologi yang lain. Teknologi yang dimaksud yaitu …",a:["proyektor","speaker","laptop","drone"],k:0}
+  {q:"Bentuk permukaan Bumi pada kenyataannya tidaklah rata. Ada daerah yang lebih tinggi maupun lebih rendah dibandingkan daerah lainnya. Perbedaan tinggi rendahnya permukaan Bumi disebut ....", a:["relief","oval","rata","lempengan"], k:1},
+  {q:"Dedi mengayuh sepeda kesayangannya menuju ke sekolah. Dedi berada di salah satu bagian bumi, yaitu ....", a:["litosfer","hidrosfer","atmosfer","antariksa"], k:1},
+  {q:"Wilayah bentang alam tersebut berada di sekitar gunung. Bentuknya seperti cekungan. Wilayah daratan yang dimaksud yaitu ....", a:["bukit","lembah","dataran rendah","rawa"], k:2},
+  {q:"Kenampakan alam yang ditemui di daratan ditunjukkan oleh nomor ....", a:["1, 2, dan 5","1, 2, dan 3","2, 3, dan 5","2, 4, dan 5"], k:1},
+  {q:"Salah satu contoh bagian permukaan Bumi yang berada sekitar 700 m di atas permukaan laut dan memiliki permukaan yang rata yaitu ....", a:["Gunung Rinjani","Bukit Asah","Dataran rendah Pantura","Dataran tinggi Dieng"], k:4},
+  {q:"Aku adalah tumpukan tanah yang lebih tinggi daripada tempat sekelilingnya. Aku adalah ....", a:["dataran rendah","dataran tinggi","bukit","lembah"], k:3},
+  {q:"Kenampakan alam yang ditunjukkan oleh gambar di atas yaitu ....", a:["lembah","bukit","gunung","dataran tinggi"], k:3},
+  {q:"Bagian dari permukaan Bumi yang digenangi air mengalir disebut ....", a:["sungai","danau","rawa","laut"], k:1},
+  {q:"Tanah rendah yang digenangi air dan umumnya ada di daerah dekat pantai disebut ....", a:["laut","danau","rawa","sungai"], k:3},
+  {q:"Udara yang menyelimuti permukaan bumi disebut ....", a:["litosfer","hidrosfer","atmosfer","antariksa"], k:3},
+  {q:"Lapisan yang membantu mengurangi intensitas sinar ultraviolet (UV) dari cahaya matahari yang masuk ke bumi disebut ....", a:["eksosfer","mesosfer","troposfer","ozon"], k:4},
+  {q:"Aku bertugas membakar meteor yang masuk ke lapisan atmosfer bumi agar saat jatuh ukurannya lebih kecil. Aku adalah ....", a:["stratosfer","mesosfer","eksosfer","termosfer"], k:2},
+  {q:"Benda di atas berada pada lapisan ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1},
+  {q:"Urutan lapisan atmosfer dari yang paling dekat dengan bumi yaitu ....", a:["5, 4, 3, 1, 2","5, 4, 1, 3, 2","4, 5, 3, 1, 2","4, 5, 1, 3, 2"], k:2},
+  {q:"Daerah di luar atmosfer yang terletak lebih dari 400 km di atas permukaan bumi disebut ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1}
 ];
 
 // ========== SCRIPT LOGIKA ==============
@@ -315,3 +296,4 @@ function kirimDataKeGoogleSheet(nama,kelas,absen,nilai){
 </script>
 </body>
 </html>
+
