--- a/kelas-5/tugas/tugas_IPAS_11_Nov_25.html
+++ b/kelas-5/tugas/tugas_IPAS_11_Nov_25.html
@@ -207,7 +207,6 @@ let soal = [{q:"Perhatikan benda berikut! 1) lemari 2) bolpoin 3) parfum 4) blen
 
   {q:"Perhatikan pernyataan berikut: 1. Dapat menarik benda plastik 2. Dapat menarik benda logam 3. Dapat menolak benda plastik 4. Dapat menolak benda logam. Pernyataan yang tepat terkait magnet ditunjukkan oleh nomor....", a:["1","2","3","4"], k:2},
   {q:"Adit meletakkan magnet batangan di atas meja. Ia lalu menjatuhkan peniti di dekat magnet. Peniti tersebut menempel pada magnet. Peristiwa ini terjadi akibat adanya....", a:["usaha magnet","kecepatan magnet","medan magnet","perubahan magnet"], k:3},
-  {q:"Benda-benda di atas yang dapat ditarik kuat oleh magnet yaitu....", a:["1, 2, dan 5","1, 2, dan 3","2, 3, dan 5","2, 4, dan 5"], k:1},
   {q:"Danisha membawa benda yang tidak memiliki sifat kemagnetan sama sekali. Benda yang dimaksud yaitu....", a:["besi","baja","kobalt","kerikil"], k:4},
   {q:"Magnet memberikan banyak manfaat dalam kehidupan sehari-hari. Berikut ini salah satu contohnya yaitu....", a:["sepatu sepak bola","termometer","balon udara","pintu kulkas"], k:4},
   {q:"Perhatikan pernyataan berikut! 1. Magnet dapat menarik benda dari logam 2. Magnet dapat menarik semua benda 3. Magnet memiliki dua kutub 4. Magnet tidak memiliki kutub. Pernyataan yang benar ditunjukkan oleh nomor....", a:["1 dan 3","2 dan 4","2 dan 3","1 dan 2"], k:1},
@@ -226,9 +225,15 @@ let soal = [{q:"Perhatikan benda berikut! 1) lemari 2) bolpoin 3) parfum 4) blen
   {q:"Udara yang menyelimuti permukaan bumi disebut ....", a:["litosfer","hidrosfer","atmosfer","antariksa"], k:3},
   {q:"Lapisan yang membantu mengurangi intensitas sinar ultraviolet (UV) dari cahaya matahari yang masuk ke bumi disebut ....", a:["eksosfer","mesosfer","troposfer","ozon"], k:4},
   {q:"Aku bertugas membakar meteor yang masuk ke lapisan atmosfer bumi agar saat jatuh ukurannya lebih kecil. Aku adalah ....", a:["stratosfer","mesosfer","eksosfer","termosfer"], k:2},
-  {q:"Benda di atas berada pada lapisan ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1},
-  {q:"Urutan lapisan atmosfer dari yang paling dekat dengan bumi yaitu ....", a:["5, 4, 3, 1, 2","5, 4, 1, 3, 2","4, 5, 3, 1, 2","4, 5, 1, 3, 2"], k:2},
-  {q:"Daerah di luar atmosfer yang terletak lebih dari 400 km di atas permukaan bumi disebut ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1}
+{q:"Lapisan atmosfer yang paling dekat dengan permukaan bumi adalah ....", a:["stratosfer","troposfer","mesosfer","termosfer"], k:1},
+  {q:"Lapisan atmosfer tempat terjadinya awan dan hujan adalah ....", a:["stratosfer","mesosfer","troposfer","termosfer"], k:2},
+  {q:"Lapisan atmosfer yang berfungsi memantulkan gelombang radio adalah ....", a:["ionosfer","stratosfer","troposfer","mesosfer"], k:0},
+  {q:"Lapisan atmosfer yang melindungi bumi dari meteor adalah ....", a:["troposfer","mesosfer","termosfer","stratosfer"], k:1},
+  {q:"Lapisan ozon terdapat pada lapisan ....", a:["stratosfer","mesosfer","troposfer","termosfer"], k:0},
+  {q:"Satelit buatan berada pada lapisan ....", a:["mesosfer","termosfer","stratosfer","eksosfer"], k:3},
+  {q:"Lapisan atmosfer yang paling luar disebut ....", a:["termosfer","eksosfer","mesosfer","stratosfer"], k:1},
+  {q:"Pesawat jet terbang pada lapisan ....", a:["stratosfer","troposfer","mesosfer","termosfer"], k:0}  {q:"Urutan lapisan atmosfer dari yang paling dekat dengan bumi adalah .... (1) termosfer (2) eksosfer (3) mesosfer (4) troposfer (5) stratosfer", a:["5, 4, 3, 1, 2","5, 4, 1, 3, 2","4, 5, 3, 1, 2","4, 5, 1, 3, 2"], k:2}  {q:"Daerah di luar atmosfer yang terletak lebih dari 400 km di atas permukaan bumi disebut ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1}
+
 ];
 
 // ========== SCRIPT LOGIKA ==============
@@ -296,4 +301,5 @@ function kirimDataKeGoogleSheet(nama,kelas,absen,nilai){
 </script>
 </body>
 </html>
+
 
