--- a/kelas-5/tugas/tugas_IPAS_11_Nov_25.html
+++ b/kelas-5/tugas/tugas_IPAS_11_Nov_25.html
@@ -232,7 +232,9 @@ let soal = [{q:"Perhatikan benda berikut! 1) lemari 2) bolpoin 3) parfum 4) blen
   {q:"Lapisan ozon terdapat pada lapisan ....", a:["stratosfer","mesosfer","troposfer","termosfer"], k:0},
   {q:"Satelit buatan berada pada lapisan ....", a:["mesosfer","termosfer","stratosfer","eksosfer"], k:3},
   {q:"Lapisan atmosfer yang paling luar disebut ....", a:["termosfer","eksosfer","mesosfer","stratosfer"], k:1},
-  {q:"Pesawat jet terbang pada lapisan ....", a:["stratosfer","troposfer","mesosfer","termosfer"], k:0}  {q:"Urutan lapisan atmosfer dari yang paling dekat dengan bumi adalah .... (1) termosfer (2) eksosfer (3) mesosfer (4) troposfer (5) stratosfer", a:["5, 4, 3, 1, 2","5, 4, 1, 3, 2","4, 5, 3, 1, 2","4, 5, 1, 3, 2"], k:2}  {q:"Daerah di luar atmosfer yang terletak lebih dari 400 km di atas permukaan bumi disebut ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1}
+  {q:"Pesawat jet terbang pada lapisan ....", a:["stratosfer","troposfer","mesosfer","termosfer"], k:0},  
+  {q:"Urutan lapisan atmosfer dari yang paling dekat dengan bumi adalah .... (1) termosfer (2) eksosfer (3) mesosfer (4) troposfer (5) stratosfer", a:["5, 4, 3, 1, 2","5, 4, 1, 3, 2","4, 5, 3, 1, 2","4, 5, 1, 3, 2"], k:2},  
+  {q:"Daerah di luar atmosfer yang terletak lebih dari 400 km di atas permukaan bumi disebut ....", a:["eksosfer","mesosfer","stratosfer","termosfer"], k:1}
 
 ];
 
@@ -301,5 +303,6 @@ function kirimDataKeGoogleSheet(nama,kelas,absen,nilai){
 </script>
 </body>
 </html>
+
 
 
