--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -175,7 +175,7 @@
       <span class="emoji">🎨</span>
       Gunung Seni Budaya
     </a>
-    <a href="#bjawa5.html" class="map-item">
+    <a href="tugas/bahasa_jawa/landing-page-bahasa-jawa.html" class="map-item">
       <span class="emoji">🏡</span>
       Desa Bahasa Jawa
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
