--- a/kelas-5/tugas/bahasa _jawa/landing-page-bahasa-jawa.html
+++ b/kelas-5/tugas/bahasa _jawa/landing-page-bahasa-jawa.html
@@ -206,7 +206,7 @@
 
 <!-- Menu kanan atas -->
 <div class="top-menu">
-  <a href="../../index.html">🏠 Beranda</a>
+  <a href="../../../index.html">🏠 Beranda</a>
   <a href="../../Petualangan-Kelas-5.html">◀️ Kembali</a>
   <a href="galeri.html">🖼️ Galeri</a>
 </div>
@@ -282,4 +282,5 @@
 
 </body>
 </html>
+
 
