--- a/kelas-5/tugas/bahasa _jawa/landing-page-bahasa-jawa.html
+++ b/kelas-5/tugas/bahasa _jawa/landing-page-bahasa-jawa.html
@@ -208,7 +208,7 @@
 <div class="top-menu">
   <a href="../../../index.html">🏠 Beranda</a>
   <a href="../../Petualangan-Kelas-5.html">◀️ Kembali</a>
-  <a href="galeri.html">🖼️ Galeri</a>
+  <a href="#galeri.html">🖼️ Galeri</a>
 </div>
 
 <div class="container">
@@ -282,5 +282,6 @@
 
 </body>
 </html>
+
 
 
