--- a/kelas-5/tugas/bahasa _jawa/soal-bahasa-jawa-11-November-2025.html
+++ b/kelas-5/tugas/bahasa _jawa/soal-bahasa-jawa-11-November-2025.html
@@ -161,7 +161,7 @@ button:hover { background-color: #0056b3; }
 <div class="container">
   <div class="nav">
     <a href="materi-bahsa-jawa.html">◀️ Kembali</a>
-    <a href="#" onclick="window.location.reload()">🔄 Ulangi</a>
+    <a href="javascript:void(0)" onclick="window.location.reload()">🔄 Ulangi</a>
   </div>
 
   <h1 style="color:#2c3e50;text-align:center;background-color:white;padding:10px 20px;border-radius:10px;border:2px solid #add8e6;">
@@ -327,3 +327,4 @@ function selesaiKuis(){
 </script>
 </body>
 </html>
+
