--- a/kelas-5/tugas/bahasa _jawa/landing-page-bahasa-jawa.html
+++ b/kelas-5/tugas/bahasa _jawa/landing-page-bahasa-jawa.html
@@ -276,12 +276,13 @@
   </div>
 
   <div class="footer">
-    <button onclick="window.location.href='Petualangan-Kelas-5.html'">🔙 Bali menyang Peta Petualangan</button>
+    <button onclick="window.location.href='../../Petualangan-Kelas-5.html'">🔙 Bali menyang Peta Petualangan</button>
   </div>
 </div>
 
 </body>
 </html>
+
 
 
 
