--- a/kelas-5/istanap-pancasila/istana-pancasila.html
+++ b/kelas-5/istanap-pancasila/istana-pancasila.html
@@ -153,12 +153,14 @@
     <a href="#penerapan-warga" class="map-item"><span class="emoji">🧍</span>Penerapan bagi Warga Negara</a>
     <a href="#gotong-royong" class="map-item"><span class="emoji">🤝</span>Tradisi Gotong Royong</a>
     <a href="#gotong-kota" class="map-item"><span class="emoji">🏙️</span>Gotong Royong di Kota & Kabupaten</a>
+    <a href="buku-incer.html" class="map-item"><span class="emoji">👫</span>Norma</a>
       </div>
 
  
 </body>
 
 </html>
+
 
 
 
