--- a/kelas-5/istanap-pancasila/buku-incer/norma.html
+++ b/kelas-5/istanap-pancasila/buku-incer/norma.html
@@ -159,7 +159,7 @@
   <span class="emoji">🙂</span>Contoh Perilaku Sesuai Norma
 </a>
 
-<a href="#" class="map-item">
+<a href="tugas-norma.html" class="map-item">
   <span class="emoji">📑</span>Macam-Macam Norma
 </a>
 
@@ -179,3 +179,4 @@
 
 </body>
 </html>
+
