--- a/kelas-5/istanap-pancasila/buku-incer/norma.html
+++ b/kelas-5/istanap-pancasila/buku-incer/norma.html
@@ -131,8 +131,8 @@
       <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
     </div>
     <div class="nav-right">
-      <a href="../../index.html">🏠 Beranda</a>
-      <a href="../Petualangan-Kelas-5.html">◀️ kembali</a>
+      <a href="../../../index.html">🏠 Beranda</a>
+      <a href="../../Petualangan-Kelas-5.html">◀️ kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -179,4 +179,5 @@
 
 </body>
 </html>
+
 
