--- a/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
+++ b/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
@@ -209,8 +209,8 @@
     </div>
 
     <div class="nav-right">
-      <a href="../../index.html">🏠 Beranda</a>
-      <a href="Materi-Norma.html">◀️ Kembali</a>
+      <a href="../../../index.html">🏠 Beranda</a>
+      <a href="Norma.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
