--- a/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
+++ b/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
@@ -224,7 +224,7 @@
     </p>
 
     <div class="dropdown">
-      <div class="dropdown-btn">📚 Pilih Tugas Macam-Macam Norma ⬇️</div>
+      <div class="dropdown-btn">📚 Pilih Tugas ⬇️</div>
       <div class="dropdown-content">
         <a href="tugas1.html">✨ Tugas 1</a>
         <a href="tugas2.html">🌟 Tugas 2</a>
@@ -242,4 +242,5 @@
 
 </body>
 </html>
+
 
