--- a/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
+++ b/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
@@ -210,7 +210,7 @@
 
     <div class="nav-right">
       <a href="../../../index.html">🏠 Beranda</a>
-      <a href="Norma.html">◀️ Kembali</a>
+      <a href="norma.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -242,5 +242,6 @@
 
 </body>
 </html>
+
 
 
