--- a/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
+++ b/kelas-5/istanap-pancasila/buku-incer/landing-page-tugas-norma.html
@@ -226,22 +226,23 @@
     <div class="dropdown">
       <div class="dropdown-btn">📚 Pilih Tugas ⬇️</div>
       <div class="dropdown-content">
-        <a href="tugas1.html">✨ Tugas 1</a>
-        <a href="tugas2.html">🌟 Tugas 2</a>
-        <a href="tugas3.html">💡 Tugas 3</a>
-        <a href="tugas4.html">🔥 Tugas 4</a>
-        <a href="tugas5.html">🎉 Tugas 5</a>
-        <a href="tugas6.html">🌈 Tugas 6</a>
-        <a href="tugas7.html">🚀 Tugas 7</a>
-        <a href="tugas8.html">🎯 Tugas 8</a>
-        <a href="tugas9.html">💎 Tugas 9</a>
-        <a href="tugas10.html">🏅 Tugas 10</a>
+        <a href="tugas-norma-1.html">✨ Tugas 1</a>
+        <a href=#"tugas2.html">🌟 Tugas 2</a>
+        <a href=#"tugas3.html">💡 Tugas 3</a>
+        <a href=#"tugas4.html">🔥 Tugas 4</a>
+        <a href=#"tugas5.html">🎉 Tugas 5</a>
+        <a href=#"tugas6.html">🌈 Tugas 6</a>
+        <a href=#"tugas7.html">🚀 Tugas 7</a>
+        <a href=#"tugas8.html">🎯 Tugas 8</a>
+        <a href=#"tugas9.html">💎 Tugas 9</a>
+        <a href=#"tugas10.html">🏅 Tugas 10</a>
       </div>
     </div>
   </div>
 
 </body>
 </html>
+
 
 
 
