--- a/kelas-5/istanap-pancasila/buku-incer/tugas-norma-1.html
+++ b/kelas-5/istanap-pancasila/buku-incer/tugas-norma-1.html
@@ -185,7 +185,8 @@
 </div>
 
   <!-- TOMBOL SIAP KERJAKAN TUGAS -->
-  <a class="btn-kerjakan" href="Soal_Tugas_Norma_1.html">🎉 Siap Kerjakan Tugas! 🎉</a>
+  <a class="btn-kerjakan" href="Soal_tugas_norma_1.html">🎉 Siap Kerjakan Tugas! 🎉</a>
 
 </body>
 </html>
+
