--- a/kelas-5/lembah/penjumlaan-dan-pengurangan-pecahan.html
+++ b/kelas-5/lembah/penjumlaan-dan-pengurangan-pecahan.html
@@ -123,16 +123,22 @@
 
   <script>
     const imageLinks = [
-      "https://i.imgur.com/zOZ2Cen.png",
-      "https://i.imgur.com/PBvcn0x.png",
-      "https://i.imgur.com/XWWYgji.png",
-      "https://i.imgur.com/KKxJp2V.png",
-      "https://i.imgur.com/qZ4nTtZ.png",
-      "https://i.imgur.com/vlFnrLU.png",
-      "https://i.imgur.com/6bdpVNx.png",
-      "https://i.imgur.com/e58SCBW.png",
-      "https://i.imgur.com/TZdBdZ7.png",
-      "https://i.imgur.com/WlSU2f0.png"
+      "https://i.imgur.com/hlm8Zg1.png", //soal 1
+      "https://i.imgur.com/smRojbD.png", //soal 2
+      "https://i.imgur.com/zwggr4U.png", //soal 3
+      "https://i.imgur.com/lqlu66e.png", //soal 4
+      "https://i.imgur.com/2SMuWIV.png", //soal 5
+      "https://i.imgur.com/8rf7NQD.png", //soal 6
+      "https://i.imgur.com/V6ue1yg.png", //soal 7
+      "https://i.imgur.com/p732whj.png", //soal 8
+      "https://i.imgur.com/MMAp3rN.png", //soal 9
+      "https://i.imgur.com/jF1rJiy.png", //soal 10
+      "https://i.imgur.com/mBhN8VD.png", //soal 11
+"https://i.imgur.com/KAiBpI7.png", //soal 12
+"https://i.imgur.com/9zgWUW3.png", //soal 13
+"https://i.imgur.com/OzWwGXH.png", //soal 14
+"https://i.imgur.com/zWOrBGN.png", //soal 15
+"https://i.imgur.com/GpRvEJD.png" //soal 16
     ];
 
     function createCircles() {
@@ -237,3 +243,4 @@
 
 </body>
 </html>
+
