--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -179,7 +179,7 @@
       <span class="emoji">🏡</span>
       Desa Bahasa Jawa
     </a>
-    <a href="#plh5.html" class="map-item">
+    <a href="plh5.html" class="map-item">
       <span class="emoji">🌱</span>
       Danau PLH
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
