--- a/kelas-5/Danau_PLH/plh5.html
+++ b/kelas-5/Danau_PLH/plh5.html
@@ -139,7 +139,7 @@
   <!-- Menu Interaktif -->
   <div class="map-grid">
     <a href="#" class="map-item"><span class="emoji">🚰</span>Bab 1 – Kebersihan, Fungsi Sanitasi, & Drainase</a>
-    <a href="#" class="map-item"><span class="emoji">🗑️</span>Bab 2 – Pengelolaan Sampah</a>
+    <a href="bab2.html" class="map-item"><span class="emoji">🗑️</span>Bab 2 – Pengelolaan Sampah</a>
     <a href="#" class="map-item"><span class="emoji">🌳</span>Bab 3 – Penanaman & Pemeliharaan Pohon</a>
     <a href="#" class="map-item"><span class="emoji">💧</span>Bab 4 – Konservasi Air Tanah</a>
     <a href="#" class="map-item"><span class="emoji">🎋</span>Bab 5 – Karya Alam</a>
@@ -147,3 +147,4 @@
 
 </body>
 </html>
+
