--- a/kelas-5/Danau_PLH/Sampah_di_Lingkungan_dan_Jenisnya.html
+++ b/kelas-5/Danau_PLH/Sampah_di_Lingkungan_dan_Jenisnya.html
@@ -203,9 +203,10 @@ margin-top:70px;   /* ✨ Tambahkan ini */
     </section>
 
     <article class="box box-materi">
-      <p><strong>Sampah</strong> adalah bahan-bahan baik padat atau cairan yang tidak dipergunakan lagi dan dibuang...</p>
-      <p>Sampah dapat berasal dari segala bahan buangan...</p>
-      <p>Amati lingkungan di sekitar sekolahmu...</p>
+      <p><strong>Sampah</strong> adalah bahan-bahan baik padat atau cairan yang tidak dipergunakan lagi dan dibuang. Sampah merupakan sesuatu yang telah dibuang dan mungkin sudah tidak bisa dimanfaatkan kembali. Akan tetapi, harus dikelola agar tidak membahayakan lingkungan.</p>
+<p>Sampah dapat berasal dari segala bahan buangan baik sisa-sisa sayuran, potongan-potongan kayu, logam, kertas, kaca, peralatan rumah tangga, hewan, ataupun sisa-sisa metabolisme dalam tubuh manusia dan binatang. Dalam kehidupan manusia, sampah dalam jumlah yang besar datang dari aktivitas industri yang sudah tidak terpakai lagi. Sisa hasil produksi dikenal dengan sebutan limbah, misalnya: pertambangan, konsumsi, dan lain-lain. Hampir semua produk industri akan menjadi sampah dari suatu waktu, dengan jumlah sampah yang hampir sama dengan jumlah konsumsi yang akan menyebabkan pencemaran lingkungan hidup kita.</p>
+<p>Amati lingkungan di sekitar sekolahmu. Apakah di sekolahmu sudah bersih dari sampah sehingga terasa asri dan sehat? Sebaliknya, apakah sekolahmu berdekatan dengan tempat penampungan sampah atau dekat lingkungan pabrik? Kalian harus waspada terhadap ancaman-ancaman yang ditimbulkan oleh sampah baik sampah padat, cair maupun asap yang dikeluarkan dari pabrik dan TPS.</p>
+
     </article>
 
     <!-- 2. Jenis-Jenis Sampah -->
