--- a/kelas-5/Danau_PLH/Sampah_di_Lingkungan_dan_Jenisnya.html
+++ b/kelas-5/Danau_PLH/Sampah_di_Lingkungan_dan_Jenisnya.html
@@ -174,9 +174,9 @@ margin-top:70px;   /* ✨ Tambahkan ini */
 
   
 <div class="top-menu">
-  <a href="index.html">🏠 Beranda</a>
-  <a href="javascript:history.back()">◀️ Kembali</a>
-  <a href="kelas.html">🏫 Kelas</a>
+  <a href="../../index.html">🏠 Beranda</a>
+  <a href="bab2.html">◀️ Kembali</a>
+  <a href="../kelas.html">🏫 Kelas</a>
 </div>
 
   <div class="container">
@@ -269,3 +269,4 @@ margin-top:70px;   /* ✨ Tambahkan ini */
   </div>
 </body>
 </html>
+
