--- a/kelas-5/Danau_PLH/plh5.html
+++ b/kelas-5/Danau_PLH/plh5.html
@@ -126,7 +126,7 @@
       <a href="../../index.html">🏠 Beranda</a>
       <a href="../Petualangan-Kelas-5.html">◀️ kembali</a>
       <a href="#">🖼️ Galeri</a>
-      <a href="kelas.html">🏫 Kelas</a>
+      <a href="../kelas.html">🏫 Kelas</a>
     </div>
   </nav>
 
@@ -147,4 +147,5 @@
 
 </body>
 </html>
+
 
