--- a/kelas-5/Danau_PLH/bab2.html
+++ b/kelas-5/Danau_PLH/bab2.html
@@ -139,10 +139,11 @@
   <!-- Menu Interaktif -->
  <div class="map-grid">
   <a href="Sampah_di_Lingkungan_dan_Jenisnya.html" class="map-item"><span class="emoji">🗑️</span>Sampah di Lingkungan dan Jenisnya</a>
-  <a href="#" class="map-item"><span class="emoji">♻️</span>Cara Pemanfaatan Sampah</a>
+  <a href="Cara-Pemanfaatan-Sampah.html" class="map-item"><span class="emoji">♻️</span>Cara Pemanfaatan Sampah</a>
   <a href="#" class="map-item"><span class="emoji">⚠️</span>Dampak Negatif Membuang Sampah Sembarangan</a>
 </div>
 
 </body>
 </html>
+
 
