--- a/kelas-5/Danau_PLH/Soal-Cara-Pemanfaatan-Sampah.html
+++ b/kelas-5/Danau_PLH/Soal-Cara-Pemanfaatan-Sampah.html
@@ -120,7 +120,7 @@ button:hover { background-color: #0056b3; }
 
 <div class="container">
     <div class="nav">
-        <a href="🕵Petualangan-Seru.html">◀️ kembali</a>
+        <a href="Cara-Pemanfaatan-Sampah.html">◀️ kembali</a>
     </div>
 
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -777,3 +777,4 @@ function kirimNilai(nilai) {
 
 </body>
 </html>
+
