--- a/kelas-5/Danau_PLH/Cara-Pemanfaatan-Sampah.html
+++ b/kelas-5/Danau_PLH/Cara-Pemanfaatan-Sampah.html
@@ -150,9 +150,9 @@
 
   <!-- Navigasi kanan atas -->
   <div class="nav-right">
-    <a href="#">🏠 Beranda</a>
-    <a href="#">◀️ Kembali</a>
-    <a href="#">🏫 Kelas</a>
+    <a href="../../index.html">🏠 Beranda</a>
+    <a href="bab2.html">◀️ Kembali</a>
+    <a href="../kelas.html">🏫 Kelas</a>
   </div>
 
   <div class="container">
@@ -388,3 +388,4 @@ Selain pengusaha, mengolah sampah plastik juga dapat dilakukan di rumah tangga. 
   </div>
 </body>
 </html>
+
