--- a/kelas-5/Danau_PLH/Cara-Pemanfaatan-Sampah.html
+++ b/kelas-5/Danau_PLH/Cara-Pemanfaatan-Sampah.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pengolaan Sampah</title>
+  <title>Cara Pemanfaatan Sampah</title>
   <style>
     :root{
       --pad:16px;
@@ -388,4 +388,5 @@ Selain pengusaha, mengolah sampah plastik juga dapat dilakukan di rumah tangga. 
   </div>
 </body>
 </html>
+
 
