--- a/kelas-5/Danau_PLH/Sampah_di_Lingkungan_dan_Jenisnya.html
+++ b/kelas-5/Danau_PLH/Sampah_di_Lingkungan_dan_Jenisnya.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pengolaan Sampah</title>
+  <title>Sampah di Lingkungan dan Jenisnya</title>
   <style>
 
 .nav-left {
@@ -269,5 +269,6 @@ margin-top:70px;   /* ✨ Tambahkan ini */
   </div>
 </body>
 </html>
+
 
 
