--- a/kelas-5/Danau_PLH/soal_Sampah_di_Lingkungan_dan_Jenisnya.html
+++ b/kelas-5/Danau_PLH/soal_Sampah_di_Lingkungan_dan_Jenisnya.html
@@ -149,7 +149,7 @@ button:hover { background-color: #0056b3; }
 <body>
 <div class="container">
     <div class="nav">
-        <a href="🕵Petualangan-Seru.html">◀️ kembali</a>
+        <a href="Sampah_di_Lingkungan_dan_Jenisnya.html">◀️ kembali</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
         🕵️ Detektif Cilik Ayo Uji Kepintaranmu
@@ -392,7 +392,7 @@ function ulangiKuis(){
 }
 
 function keluarKuis(){
-    window.location.href = "🕵Petualangan-Seru.html";
+    window.location.href = "Sampah_di_Lingkungan_dan_Jenisnya.html";
 }
 
 /* === SUARA === */
@@ -410,3 +410,4 @@ document.addEventListener("DOMContentLoaded",()=>{
 </script>
 </body>
 </html>
+
