--- a/kelas-5/Danau_PLH/Jenis-Penyakit.html
+++ b/kelas-5/Danau_PLH/Jenis-Penyakit.html
@@ -131,7 +131,7 @@
   <!-- Navigasi kanan atas -->
   <div class="nav-right">
     <a href="../../index.html">🏠 Beranda</a>
-    <a href="bab2.html">◀️ Kembali</a>
+    <a href="Dampak-Negatif.html">◀️ Kembali</a>
     <a href="../kelas.html">🏫 Kelas</a>
   </div>
 
@@ -197,3 +197,4 @@
   </div>
 </body>
 </html>
+
