--- a/kelas-5/Danau_PLH/Cara-Mengatasi-Sampah-Berserakan.html
+++ b/kelas-5/Danau_PLH/Cara-Mengatasi-Sampah-Berserakan.html
@@ -175,10 +175,11 @@
     </article>
 
     <!-- Tombol Evaluasi -->
-    <a class="btn-evaluasi" href="Soal-Dampak-Negatif-Membuang-Sampah-Sembarangan">
+    <a class="btn-evaluasi" href="Soal-Cara-Mengatasi-Sampah-Berserakan.html">
       ➤ Mulai Evaluasi
     </a>
 
   </div>
 </body>
 </html>
+
