--- a/kelas-5/Danau_PLH/Membuat-Tempat-Sampah.html
+++ b/kelas-5/Danau_PLH/Membuat-Tempat-Sampah.html
@@ -151,7 +151,7 @@
   <!-- Navigasi kanan atas -->
   <div class="nav-right">
     <a href="#">🏠 Beranda</a>
-    <a href="#">◀️ Kembali</a>
+    <a href="Dampak-Negatif.html">◀️ Kembali</a>
     <a href="#">🏫 Kelas</a>
   </div>
 
@@ -250,4 +250,5 @@ Hal yang terpenting adalah mulai merealisasikannya dari sekarang.</p>
   </div>
 </body>
 </html>
+
 
