--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -195,7 +195,8 @@
     <div class="dropdown" id="dropdownTanggal">
       <button class="dropbtn">📅 Pilih Tugas</button>
       <div class="dropdown-content">
-        <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html">12 November 2025</a>
+        <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html">Rabu, 12 November 2025</a>
+        <a href="Soal_Tugas_Selasa_25_November_2025.html">Selasa, 25 November 2025</a>
         <a href="#" id="tugasLain">Tugas Lain</a>
       </div>
     </div>
@@ -236,4 +237,5 @@
 
 </body>
 </html>
+
 
